# HTTP-Framework

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  web-server.sublime-workspace
.cache/clangd/index/: arena.c.A39CC3A0F41C4E24.idx  arena.h.D14B9A89A3A8A232.idx  cJSON.h.B96ED4F4216B1BC9.idx  escape_characters.h.EBEA3E0CBDAA0099.idx  file_handling.h.8386C3A7D6C1D706.idx  global.h.27B389940BC2225C.idx  http_request.c.49C9073446B06413.idx  http_request.h.595B83F797D765BB.idx  platform.h.DEC0F6D554519197.idx  re.h.627B256F3961A044.idx  server.c.3D930B7162A03E4A.idx  string_handling.c.7A3FED856C811989.idx  string_handling.h.A915D1DDD56BB4D1.idx  util.h.63FE60CF1E4EDFB0.idx
HTTPServer/: HTTPServer.inspxeproj
HTTPServer/r000mi3/: r000mi3.inspxe
HTTPServer/r000mi3/config/: context_values.cfg  runmc.options
HTTPServer/r000mi3/data.0/: httpserver_27980.pdr  httpserver_27980.pdr.db3  httpserver_27980.pdr_bak  inspxe-runmc.txt
HTTPServer/r000mi3/summary/: summary_data.xml
HTTPServer/r001ti3/: r001ti3.inspxe
HTTPServer/r001ti3/config/: collection.cfg  context_values.cfg  runtc.options
HTTPServer/r001ti3/data.0/: httpserver.pdr  httpserver.pdr.db3  httpserver.pdr_bak  inspxe-runtc.txt
docs/: http_authentication.md  http_cjson_helper.md  http_database.md  http_file_handling.md  http_platform.md  http_request.md  http_string_handling.md  http_util.md
examples/example_rest_api/: CMakeLists.txt  rest_api.c
examples/example_rest_api/misc/: build.bat  build.sh  run.bat  run.sh
examples/example_server/: CMakeLists.txt  server.c
examples/example_server/include/: base_thread.h  http_arena.h  http_authentication.h  http_cjson_helper.h  http_database.h  http_file_handling.h  http_platform.h  http_request.h  http_string_handling.h  http_util.h  thread_pool.h
examples/example_server/misc/: build.bat  build.sh  run.bat  run.sh
examples/example_server/static/: login_form.html
examples/static/: error_page.html  new_route.html  puts_output.txt  rest_api_example.html  testing.html
include/: base_thread.h  http_arena.h  http_authentication.h  http_cjson_helper.h  http_database.h  http_file_handling.h  http_platform.h  http_request.h  http_string_handling.h  http_util.h  thread_pool.h
linux_cert_temp/: cert.pem  key.pem
misc/: build.bat  build.sh  build_examples.bat  build_examples.sh  debug.bat  install.bat  install.sh  run.bat  run.sh  setup_linux.sh  setup_windows.bat
src/: arena.c  arena.h  authentication.c  authentication.h  base_thread.c  base_thread.h  cjson_helper.c  cjson_helper.h  database.c  database.h  escape_characters.c  file_handling.c  file_handling.h  global.h  http_request.c  http_request.h  platform.c  platform.h  server.c  server.h  string_handling.c  string_handling.h  thread_pool.c  thread_pool.h  util.c  util.h
static/: firstPage.html  first_page.html  login_form.html
